# study

glib/cmake_demo/: CMakeLists.txt  demo_main.c  gbus_demo.c
glib/cmake_demo/include/: demo_export.h
glib/cmake_demo/src/: CMakeLists.txt  demo_core.c  demo_gio.c
glib/normal_demo/: .makefile.gbus.swp  hello.c  makefile.gbus  makefile.hello
glib/test/: demo.spec  mk_package.sh
